<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    app:cardUseCompatPadding="true"
    app:cardCornerRadius="@dimen/_10sdp"
    android:elevation="@dimen/_5sdp"
    android:background="@color/main_color"
    android:layout_height="wrap_content">
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/custome_et_yt"
    >


    <LinearLayout
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:orientation="vertical"
        android:padding="@dimen/_5sdp"
        android:layout_width="@dimen/_230sdp"
        android:layout_height="@dimen/_220sdp">

        <TextView
            android:id="@+id/aboutus_title"
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/aboutUS"
            android:textSize="@dimen/_18ssp"
            android:textStyle="bold"
            android:textColor="@color/txt_color"
            />

        <RelativeLayout
            android:paddingHorizontal="@dimen/_5sdp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView

                android:layout_centerVertical="true"
                android:id="@+id/developedBY_const"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:text="@string/developed_by"
                android:textColor="@color/txt_color"
                android:textSize="@dimen/_12ssp"
                android:textStyle="bold" />

            <TextView
                android:textColor="@color/txt_color"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginHorizontal="@dimen/_5sdp"
                android:layout_marginTop="@dimen/_7sdp"
                android:layout_toEndOf="@id/developedBY_const"
                android:text="@string/moazam_saleem"
                android:textSize="@dimen/_12ssp" />
        </RelativeLayout>

        <RelativeLayout
            android:paddingHorizontal="@dimen/_5sdp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_centerVertical="true"
                android:id="@+id/developer_const"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/txt_color"
                android:text="@string/owner"
                android:textStyle="bold"
                android:textSize="@dimen/_12ssp"
                android:layout_marginTop="@dimen/_5sdp"/>
            <TextView
                android:textColor="@color/txt_color"
                android:layout_centerVertical="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/brains_media"
                android:layout_marginHorizontal="@dimen/_5sdp"
                android:layout_toEndOf="@id/developer_const"
                android:layout_marginTop="@dimen/_7sdp"
                android:textSize="@dimen/_12ssp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/_5sdp"
            >

            <TextView
                android:id="@+id/reachUs"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginTop="@dimen/_5sdp"
                android:text="@string/reach_us"
                android:textColor="@color/txt_color"
                android:textSize="@dimen/_12ssp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginHorizontal="@dimen/_5sdp"
                android:layout_toEndOf="@id/reachUs"
                android:autoLink="email"
                android:clickable="true"
                android:focusable="true"
                android:text="@string/gmail"
                android:textColorLink="@color/txt_color" />

        </RelativeLayout>


        <RelativeLayout
            android:paddingHorizontal="@dimen/_5sdp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_centerVertical="true"
                android:id="@+id/address_const"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/txt_color"
                android:text="@string/address"
                android:textStyle="bold"
                android:textSize="@dimen/_12ssp"
                android:layout_marginTop="@dimen/_5sdp"/>

            <TextView
                android:id="@+id/address_slide"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginHorizontal="@dimen/_5sdp"
                android:layout_marginTop="@dimen/_7sdp"
                android:layout_toEndOf="@id/address_const"
                android:ellipsize="marquee"
                android:marqueeRepeatLimit="marquee_forever"
                android:singleLine="true"
                android:padding="@dimen/_2sdp"
                android:text="@string/Address_office"
                android:textColor="@color/txt_color"
                android:textSize="@dimen/_12ssp" />
        </RelativeLayout>

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_share"
            android:background="@android:color/transparent"
            android:layout_gravity="end"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:id="@+id/share_btn"
            />

        <Button
            android:id="@+id/close_btn"
            android:text="@string/close"
            android:drawableEnd="@drawable/ic_close"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:backgroundTint="@color/drawer_header_color"
            />


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>